--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 <a href="My%20Page/Portfolio/interests.html">Interests</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="My%20Page/Portfolio/interests.html">Sports</a>
+                    <a href="My%20Page/Portfolio/interests.html">스포츠</a>
                   </li>
                   <li>
-                    <a href="My%20Page/Portfolio/interests.html">Dramas</a>
+                    <a href="My%20Page/Portfolio/interests.html">드라마</a>
                   </li>
                 </ul>
               </li>
@@ -254,10 +254,10 @@
                   <div class="col-lg-9">
                     <div class="row">
                       <div class="col-lg-6">
-                        <img src="My%20Page/Portfolio/images/초등학교.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                        <img src="My%20Page/Portfolio/images/초등학교.jpg" alt="Image" class="img-fluid" style="width:600px;height:300px">
                       </div>
                       <div class="col-lg-6">
-                        <img src="My%20Page/Portfolio/images/초.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                        <img src="My%20Page/Portfolio/images/초.jpg" alt="Image" class="img-fluid" style="width:600px;height:300px">
                       </div>
                     </div>
                   </div>
@@ -276,10 +276,10 @@
                   <div class="col-lg-9">
                     <div class="row">
                       <div class="col-lg-6">
-                        <img src="My%20Page/Portfolio/images/중학교.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                        <img src="My%20Page/Portfolio/images/중학교.jpg" alt="Image" class="img-fluid" style="width:600px;height:300px">
                       </div>
                       <div class="col-lg-6">
-                        <img src="My%20Page/Portfolio/images/중.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                        <img src="My%20Page/Portfolio/images/중.jpg" alt="Image" class="img-fluid" style="width:600px;height:300px">
                       </div>
                     </div>
                   </div>
@@ -297,10 +297,10 @@
                   <div class="col-lg-9">
                     <div class="row">
                       <div class="col-lg-6">
-                        <img src="My%20Page/Portfolio/images/고등학교.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                        <img src="My%20Page/Portfolio/images/고등학교.jpg" alt="Image" class="img-fluid" style="width:600px;height:300px">
                       </div>
                       <div class="col-lg-6">
-                        <img src="My%20Page/Portfolio/images/고.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                        <img src="My%20Page/Portfolio/images/고.jpg" alt="Image" class="img-fluid" style="width:600px;height:300px">
                       </div>
                     </div>
                   </div>
@@ -318,10 +318,10 @@
                   <div class="col-lg-9">
                     <div class="row">
                       <div class="col-lg-6">
-                        <img src="My%20Page/Portfolio/images/학생증.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                        <img src="My%20Page/Portfolio/images/학생증.jpg" alt="Image" class="img-fluid" style="width:600px;height:300px">
                       </div>
                       <div class="col-lg-6">
-                        <img src="My%20Page/Portfolio/images/대.jpg" alt="Image" class="img-fluid" style="width:500px;height:250px">
+                        <img src="My%20Page/Portfolio/images/대.jpg" alt="Image" class="img-fluid" style="width:600px;height:300px">
                       </div>
                     </div>
                   </div>
