--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -58,10 +58,10 @@
                 <a href="interests.html">Interests</a>
                 <ul class="dropdown">
                   <li>
-                    <a href="interests.html">Sports</a>
+                    <a href="interests.html">스포츠</a>
                   </li>
                   <li>
-                    <a href="interests.html">Dramas</a>
+                    <a href="interests.html">드라마</a>
                   </li>
                 </ul>
               </li>
