웹페이지 과제 갱신에 대한 commit 7

--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -276,10 +276,10 @@
                       <img class="d-block" style="width:1000px; height:700px" src="images/맨시티.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block" style="width:1000px; height:700px" src="images/logo.jpg" alt="Second slide">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/eppl.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block" style="width:1000px; height:700px" src="images/로고.png" alt="Third slide">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/logo.jpg" alt="Third slide">
                     </div>
                   </div>
 
@@ -531,6 +531,7 @@
                             <li>'프라이드'는 2004년 작품으로 상당히 오래됐으나, 아이스하키를 주제로 한 스포츠인들의 열정과 노력을 엿볼 수 있다는 점에서 스포츠 드라마만의 매력을 느낄 수 있는 드라마다! <br> 에피소드 간의 연결성도 좋고 주인공의 대사도 귀에 쏙쏙 꽂히기에 겨울이 되면 자연스레 찾아보게 된다🧣</li>
                             <li>'오렌지데이즈'는 5명의 주인공들의 청춘을 현실적이면서 아름답게 그린 드라마다! 억지 설정, 전개가 없이 자연스럽게 흘러가는 작품이기에 보다보면 순식간에 마지막화에 다다르게 되며, 완주 후에도 후유증이 꽤나 크다🙊</li>
                             <li>'오키테가미 쿄코의 비망록'은 라이트노벨이 원작이라서 처음에 나의 스타일과 맞지 않을 것 같다고 생각했지만, 의외로 가벼운 추리물로서 자잘한 사건을 해결하는 것이 꽤나 흥미롭게 느껴졌다. 시즌2가 나왔으면 하는 아쉬움이 남아있지만, 소소한 시간 때우기 용으로 적합한 작품이다!</li>
+                          </ul>
                         </div>
                       </div>
                     </div>
@@ -581,50 +582,40 @@
             <div class="row justify-content-center text-center site-section pt-0">
               <div class="col-md-6">
                 <h2 class="display-4" data-aos="fade-up">Chinese Dramas</h2>
-                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/heart.png" style="width:22px" alt=""> 중국 드라마 역시 올해 중국어 공부를 시작하면서 새롭게 보게 된 드라마다! <img src="images/svg/heart.png" style="width:22px" alt=""></p>
-                <p data-aos="fade-up" data-aos-delay="100">!</p>
-                <p data-aos="fade-up" data-aos-delay="100">자극적인 내용보다는 힐링, 감성적인 내용의 드라마를 더욱 선호하는 편🌝</p>
-                <p data-aos="fade-up" data-aos-delay="100">(다만 판타지 장르는 좋아하지 않는다😓)</p>
+                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/heart.png" style="width:22px" alt=""> 중국 드라마 역시 올해 중국어 공부를 시작하면서 <br> 중국어 청해 연습을 위해 새롭게 보기 시작했다! <img src="images/svg/heart.png" style="width:22px" alt=""></p>
+                <p data-aos="fade-up" data-aos-delay="100">고장극 보다는 현대극이 취향! (다만, 중국 드라마 특유의 cg가 보기 힘든 경우가 많다😢)</p>
+                <p data-aos="fade-up" data-aos-delay="100">보통 드라마에 중국어 자막이 함께 띄어져 있는 경우가 많기에 <br> 자막을 보면서 제대로 알아들었는지 확인하는 것이 가능하다!</p>
+                <p data-aos="fade-up" data-aos-delay="100">아직 중국어는 기초적인 것밖에 모르기 때문에 영자막은 필수!🤓</p>
               </div>
             </div>
             <div class="row no-gutters align-items-stretch room-animate site-section">
               <div class="col-md-7 img-wrap image-stack-item image-stack-item-top" data-jarallax-element="-100">
-                <div id="caarouselIndicators" class="carousel slide" data-ride="carousel">
+                <div id="carrouselIndicators" class="carousel slide" data-ride="carousel">
                   <ol class="carousel-indicators">
-                    <li data-target="#caarouselIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#caarouselIndicators" data-slide-to="1"></li>
-                    <li data-target="#caarouselIndicators" data-slide-to="2"></li>
-                    <li data-target="#caarouselIndicators" data-slide-to="3"></li>
-                    <li data-target="#caarouselIndicators" data-slide-to="4"></li>
+                    <li data-target="#carrouselIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carrouselIndicators" data-slide-to="1"></li>
+                    <li data-target="#carrouselIndicators" data-slide-to="2"></li>
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block" style="width:1000px; height:700px" src="images/로스쿨.jpg" alt="First slide">
-                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">JTBC 드라마 ⟪로스쿨⟫</span></div>
+                      <img class="d-block" style="width:1000px; height:700px" src="images/점연아.jpeg" alt="First slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">드라마 ⟪점연아온난니⟫</span></div>
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block" style="width:1000px; height:700px" src="images/런온.jpg" alt="Second slide">
-                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">JTBC 드라마 ⟪런온⟫</span></div>
+                      <img class="d-block" style="width:1000px; height:700px" src="images/가석.png" alt="Second slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">드라마 ⟪가석불시니⟫</span></div>
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block" style="width:1000px; height:700px" src="images/싸인.png" alt="Third slide">
-                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">SBS 드라마 ⟪싸인⟫</span></div>
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block" style="width:1000px; height:700px" src="images/서른.jpg" alt="Fourth slide">
-                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">SBS 드라마 ⟪서른이지만 열일곱입니다⟫</span></div>
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block" style="width:1000px; height:700px" src="images/당신이 잠든 사이에.jpg" alt="Fifth slide">
-                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">SBS 드라마 ⟪당신이 잠든 사이에⟫</span></div>
+                      <img class="d-block" style="width:1000px; height:700px" src="images/고독.jpg" alt="Third slide">
+                      <div class="carousel-caption d-none d-md-block"><span style="background-color: white; color:black; font-weight:bold; padding-left: 5px; padding-right:5px">드라마 ⟪고독적야수⟫</span></div>
                     </div>
                   </div>
 
-                  <a class="carousel-control-prev" href="#caarouselIndicators" role="button" data-slide="prev">
+                  <a class="carousel-control-prev" href="#carrouselIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                   </a>
-                  <a class="carousel-control-next" href="#caarouselIndicators" role="button" data-slide="next">
+                  <a class="carousel-control-next" href="#carrouselIndicators" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                   </a>
@@ -635,8 +626,8 @@
                 <div class="row justify-content-center">
                   <div class="col-md-8 py-5">
                     <div class="room-exerpt">
-                      <div class="room-price mb-4 font-weight-bold">인생 한드 list</div>
-                      <p>지금까지 봤던 드라마 중에서 '인생 드라마'라고 꼽을 수 있는 <br> 드라마들입니다!  </p>
+                      <div class="room-price mb-4 font-weight-bold">취향 중드 list</div>
+                      <p>지금까지 봤던 중국 드라마 중에서 취향에 맞는 드라마들입니다!</p>
                       <div class="row mt-4">
                         <div class="col-12">
                           <h4 class="mb-4 font-weight-bold"> 감상평 요약 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
@@ -644,11 +635,9 @@
                             <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
                           </svg></h4>
                           <ul class="list-unstyled ul-check">
-                            <li>'로스쿨'은 내가 좋아하는 추리적 요소와 함께 법과 관련된 내용이 포함돼 있어 너무나 재밌게 봤던 드라마다!<br>사건의 범인을 추리해내는 쫄깃한 과정과 적당한 반전은 덤!</li>
-                            <li>'런온'은 주체적인 캐릭터와 흔하지 않은 스토리가 일품인 드라마다!잔잔하지만 짙은 울림이 있는 대사와 연출이 무척 취향이었다★</li>
-                            <li>'싸인'은 2011년 드라마지만, 아직까지도 내용이 생생하게 기억날 정도로 인상 깊었던 드라마로, 특히 마지막화는 지금 봐도 신선한 충격 그 자체다! 해당 드라마의 영향으로 법의학에도 관심을 갖게 되기도 했다.</li>
-                            <li>'서른이지만 열입곱입니다'는 특별한 악역이 없었던 점을 특징이라 할 수 있을 만큼 따듯하고 드라마였다! 마음의 힐링을 얻고 싶을 때 종종 찾아보길 추천한다!</li>
-                            <li>'당신이 잠든 사이에'는 개인적으로 좋아했던 작가님의 작품이었던 만큼 지루하지 않게 완주한 드라마다! 약간의 판타지 요소가 들어있지만 오히려 복선의 일부로 느껴져 극에 대한 몰입감을 더해줬다!</li>
+                            <li>'점연아온난니'는 방영 전부터 기대가 많았던 작품이었는데, 실제로 봐보니 기대 이상의 퀄리티여서 보는 내내 행복했다💟 전개는 클리셰적인 부분이 많았지만, 여주인공의 성격이 다른 드라마들과 다르게 당차고 사랑스럽다 보니 흔하지만 흔하지 않게 작품을 감상할 수 있었다+주인공들의 케미도 최고였다👍</li>
+                            <li>'가석불시니'는 감각적인 연출과 정교한 영상미가 특징인 드라마다! 작품 초반에 등장하는 20대 초반 대학 시절 이야기는 싱그러운 분위기가 고스란히 느껴져서 가끔식 다시 보곤 한다🌿 또한 주인공들의 감정선을 세심하게 그려진 만큼 각자의 상황, 입장을 이해하며 내용을 해석할 수 있는 섬세한 드라마기도 하다!</li>
+                            <li>'고독적야수'는 현재 방영 중인 드라마다! 엔틱한 분위기와 미스터리한 설정이 조화롭게 어우러진 작품이다. 약간의 추리적인 내용도 들어가 있어서 지루하지 않게 감상 중이다! 무엇보다 아직 숨겨진 과거 이야기가 아직 밝혀지지 않은 만큼 마지막화까지 열심히 시청할 생각이다✨</li>
                           </ul>
                         </div>
                       </div>
@@ -659,8 +648,6 @@
             </div>
           </div>
         </div>
-
-
       </section>
     </main>
 
