--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
               <li class="mr-4">
                 <a href="#" class="js-search-toggle"><span class="icon-search2"></span></a>
               </li>
-
               <li>
                 <a href="https://www.instagram.com/elokuuyuu/"><span class="icon-instagram"></span></a>
               </li>
@@ -540,6 +539,43 @@
             </div>
           </div>
         </div>
+
+        <div class="untree_co--site-section">
+          <div class="container">
+            <div class="container pt-0 pb-5">
+              <div class="row justify-content-center text-center">
+                <div class="col-lg-6 section-heading" data-aos="fade-up">
+                  <h3 class="text-center">My motto</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container" data-aos="fade-up">
+            <div class="row">
+              <div class="col-lg-4 text-center mb-5">
+                <img src="My%20Page/Portfolio/images/시인.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
+                <h4>정호승</h4>
+                <span class="d-block mb-3 text-uppercase">시인</span>
+                <p>"홀로 일어난 새벽을 두려워 말고 별을 보고 <br> 걸어가는 사람이 되라."</p>
+              </div>
+              <div class="col-lg-4 text-center mb-5">
+                <img src="My%20Page/Portfolio/images/알프레드.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
+                <h4>Alfred Adler</h4>
+                <span class="d-block mb-3 text-uppercase">Medical Doctor&amp; Psychotherapist </span>
+                <p>"성공은 자신이 하고 있는 일을 다른 사람들과 비교하는데 시간을 낭비하지 않는 사람에게 찾아온다."</p>
+              </div>
+              <div class="col-lg-4 text-center mb-5">
+                <img src="My%20Page/Portfolio/images/샤론.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
+                <h4>Sharon Salzberg</h4>
+                <span class="d-block mb-3 text-uppercase">Bestselling author&amp; Teacher of Buddhist meditation practices in the West </span>
+                <p>"자신을 믿지 않으면 아무것도 할 수 없다. 일이 안 풀릴 때 생기는 불안함까지 신뢰하라."</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
 
         <div class="untree_co--site-section py-5 bg-body-darker">
           <div class="container">
