웹페이지 과제 갱신에 대한 commit 7

--- a/index.html
+++ b/index.html
@@ -568,13 +568,12 @@
               <div class="col-lg-4 text-center mb-5">
                 <img src="My%20Page/Portfolio/images/샤론.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
                 <h4>Sharon Salzberg</h4>
-                <span class="d-block mb-3 text-uppercase">Bestselling author&amp; Teacher of Buddhist meditation practices in the West </span>
+                <span class="d-block mb-3 text-uppercase">Bestselling author&amp;Teacher of Buddhist meditation practices</span>
                 <p>"자신을 믿지 않으면 아무것도 할 수 없다. 일이 안 풀릴 때 생기는 불안함까지 신뢰하라."</p>
               </div>
             </div>
           </div>
         </div>
-
 
 
         <div class="untree_co--site-section py-5 bg-body-darker">
