--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="container">
           <div class="row justify-content-center text-center">
             <div class="col-lg-6 section-heading" data-aos="fade-up">
-              <h3 class="text-center"><strong>Education</strong></h3>
+              <h3 class="text-center"><strong>Academic Career</strong></h3>
             </div>
           </div>
         </div>
@@ -574,7 +574,6 @@
             </div>
           </div>
         </div>
-
 
         <div class="untree_co--site-section py-5 bg-body-darker">
           <div class="container">
