웹페이지 과제 갱신에 대한 commit 7

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 <img src="My%20Page/Portfolio/images/샤론.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
                 <h4>Sharon Salzberg</h4>
                 <span class="d-block mb-3 text-uppercase">Bestselling author&amp;Teacher of Buddhist meditation practices</span>
-                <p>"자신을 믿지 않으면 아무것도 할 수 없다. 일이 안 풀릴 때 생기는 불안함까지 신뢰하라."</p>
+                <p>"자신을 믿지 않으면 아무것도 할 수 없다.<br>일이 안 풀릴 때 생기는 불안함까지 신뢰하라."</p>
               </div>
               <div class="col-lg-4 text-center mb-5">
                 <img src="My%20Page/Portfolio/images/마크.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
@@ -581,7 +581,7 @@
                 <img src="My%20Page/Portfolio/images/안드레.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
                 <h4>André Malraux</h4>
                 <span class="d-block mb-3 text-uppercase">French novelist&amp;art theorist</span>
-                <p>"오랫동안 꿈을 그려온 사람은 마침내 그 꿈을 닮아 간다."</p>
+                <p>"오랫동안 꿈을 그려온 사람은<br>마침내 그 꿈을 닮아 간다."</p>
               </div>
               <div class="col-lg-4 text-center mb-5">
                 <img src="My%20Page/Portfolio/images/공자.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
