웹페이지 과제 갱신에 대한 commit 7

--- a/index.html
+++ b/index.html
@@ -540,12 +540,12 @@
           </div>
         </div>
 
-        <div class="untree_co--site-section">
+        <div class="untree_co--site-section float-left pb-0 featured-rooms">
           <div class="container">
             <div class="container pt-0 pb-5">
               <div class="row justify-content-center text-center">
                 <div class="col-lg-6 section-heading" data-aos="fade-up">
-                  <h3 class="text-center">My motto</h3>
+                  <h3 class="text-center">My mottos</h3>
                 </div>
               </div>
             </div>
@@ -563,13 +563,13 @@
                 <img src="My%20Page/Portfolio/images/알프레드.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
                 <h4>Alfred Adler</h4>
                 <span class="d-block mb-3 text-uppercase">Medical Doctor&amp; Psychotherapist </span>
-                <p>"성공은 자신이 하고 있는 일을 다른 사람들과 비교하는데 시간을 낭비하지 않는 사람에게 찾아온다."</p>
+                <p>"성공은 자신이 하고 있는 일을<br>다른 사람들과 비교하는데 시간을<br>낭비하지 않는 사람에게 찾아온다."</p>
               </div>
               <div class="col-lg-4 text-center mb-5">
                 <img src="My%20Page/Portfolio/images/샤론.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
                 <h4>Sharon Salzberg</h4>
                 <span class="d-block mb-3 text-uppercase">Bestselling author&amp;Teacher of Buddhist meditation practices</span>
-                <p>"자신을 믿지 않으면 아무것도 할 수 없다. 일이 안 풀릴 때 생기는 불안함까지 신뢰하라."</p>
+                <p>"자신을 믿지 않으면 아무것도 할 수 없다.<br>일이 안 풀릴 때 생기는 불안함까지 신뢰하라."</p>
               </div>
               <div class="col-lg-4 text-center mb-5">
                 <img src="My%20Page/Portfolio/images/마크.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
@@ -581,7 +581,7 @@
                 <img src="My%20Page/Portfolio/images/안드레.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
                 <h4>André Malraux</h4>
                 <span class="d-block mb-3 text-uppercase">French novelist&amp;art theorist</span>
-                <p>"오랫동안 꿈을 그려온 사람은 마침내 그 꿈을 닮아 간다."</p>
+                <p>"오랫동안 꿈을 그려온 사람은<br>마침내 그 꿈을 닮아 간다."</p>
               </div>
               <div class="col-lg-4 text-center mb-5">
                 <img src="My%20Page/Portfolio/images/공자.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
