--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -309,7 +309,7 @@
                             <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
                           </svg></h4>
                           <ul class="list-unstyled ul-check" style="color:#76A7D6">
-                            <li>내가 응원하는 팀은 <a href="https://www.instagram.com/mancity/">맨체스터 시티!</span></a></li>
+                            <li>내가 응원하는 팀은 <a href="https://www.instagram.com/mancity/">맨체스터 시티!</a></li>
                             <li>개인적으로 리그 우승과 더불어 꼭 챔스 우승했으면 좋겠다,,🙏</li>
                             <li>맨시티를 좋아하게 된 순간은 에딘 제코의 중거리 슛을 본 이후부터!</li>
                             <li>시차로 인해 새벽에 경기를 보는 경우가 많으나 이제는 적응 완료😊</li>
