웹페이지 과제 갱신에 대한 commit 7

--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -376,7 +376,7 @@
             <div class="row justify-content-center text-center site-section pt-0">
               <div class="col-md-6">
                 <h2 class="display-4" data-aos="fade-up">ETC</h2>
-                <p data-aos="fade-up" data-aos-delay="100">🎉NBA, EPL외에도 야구, 배구, 테니스 등 다양한 스포츠 경기를 보고 있다🎉(국내외 가리지 않고 모두 시청 중)<br>올림픽, 월드컵 기간에는 리그 경기와 함께 올림픽, 월드컵 경기도 매번 꼬박꼬박 챙겨보는 편이다</p>
+                <p data-aos="fade-up" data-aos-delay="100">🎉NBA, EPL외에도 야구, 배구, 테니스 등 다양한 스포츠 경기를 보고 있다🎉(국내외 가리지 않고 모두 시청 중)<br>올림픽, 월드컵 기간에는 리그 경기와 함께 올림픽, 월드컵 경기도 매번 꼬박꼬박 챙겨보는 편이다!</p>
               </div>
             </div>
           </div>
