--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -529,7 +529,7 @@
                           <ul class="list-unstyled ul-check">
                             <li>'사일런트'는 가장 최근에 본 일드다! 한국 드라마 같은 연출과 감성적인 스토리 라인, 그리고 주연 배우의 호흡이 무척 좋았다! OST와 드라마의 궁합도 완벽했기에 여운이 크게 남았던 드라마다!</li>
                             <li>'프라이드'는 2004년 작품으로 상당히 오래됐으나, 아이스하키를 주제로 한 스포츠인들의 열정과 노력을 엿볼 수 있다는 점에서 스포츠 드라마만의 매력을 느낄 수 있는 드라마다! <br> 에피소드 간의 연결성도 좋고 주인공의 대사도 귀에 쏙쏙 꽂히기에 겨울이 되면 자연스레 찾아보게 된다🧣</li>
-                            <li>'오렌지데이즈'는 5명의 주인공들의 청춘을 현실적이면서 아름답게 그린 드라마다! 억지 설정, 전개가 없이 자연스럽게 흘러가는 작품이기에 보다보면 순식간에 마지막화에 다다르게 되며, 완주 후에도 후유증이 꽤나 크다🙊</li>
+                            <li>'오렌지데이즈'는 5명의 주인공들의 청춘을 현실적이면서 아름답게 그린 드라마다! 억지 설정, 전개가 없이 자연스럽게 흘러가는 작품이기에 보다보면 순식간에 마지막화에 다다르게 되고, 더불어 완주 후에도 후유증이 꽤나 크다🙊</li>
                             <li>'오키테가미 쿄코의 비망록'은 라이트노벨이 원작이라서 처음에 나의 스타일과 맞지 않을 것 같다고 생각했지만, 의외로 가벼운 추리물로서 자잘한 사건을 해결하는 것이 꽤나 흥미롭게 느껴졌다. 시즌2가 나왔으면 하는 아쉬움이 남아있지만, 소소한 시간 때우기 용으로 적합한 작품이다!</li>
                           </ul>
                         </div>
