웹페이지 과제 갱신에 대한 commit 7

--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -635,7 +635,7 @@
                             <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
                           </svg></h4>
                           <ul class="list-unstyled ul-check">
-                            <li>'점연아온난니'는 방영 전부터 기대가 많았던 작품이었는데, 실제로 봐보니 기대 이상의 퀄리티여서 보는 내내 행복했다💟 전개는 클리셰적인 부분이 많았지만, 여주인공의 성격이 다른 드라마들과 다르게 당차고 사랑스럽다 보니 흔하지만 흔하지 않게 작품을 감상할 수 있었다+주인공들의 케미도 최고였다👍</li>
+                            <li>'점연아온난니'는 방영 전부터 기대가 많았던 작품이었는데, 실제로 봐보니 기대 이상의 퀄리티여서 보는 내내 행복했다💟 전개는 클리셰적인 부분이 많았지만, 여주인공의 성격이 다른 드라마들과 다르게 당차고 사랑스러워서 흔하지만 흔하지 않게 작품을 감상할 수 있었다+주인공들의 케미도 최고였다👍</li>
                             <li>'가석불시니'는 감각적인 연출과 정교한 영상미가 특징인 드라마다! 작품 초반에 등장하는 20대 초반 대학 시절 이야기는 싱그러운 분위기가 고스란히 느껴져서 가끔식 다시 보곤 한다🌿 또한 주인공들의 감정선을 세심하게 그려진 만큼 각자의 상황, 입장을 이해하며 내용을 해석할 수 있는 섬세한 드라마기도 하다!</li>
                             <li>'고독적야수'는 현재 방영 중인 드라마다! 엔틱한 분위기와 미스터리한 설정이 조화롭게 어우러진 작품이다. 약간의 추리적인 내용도 들어가 있어서 지루하지 않게 감상 중이다! 무엇보다 아직 숨겨진 과거 이야기가 아직 밝혀지지 않은 만큼 마지막화까지 열심히 시청할 생각이다✨</li>
                           </ul>
